--- a/app/src/main/res/layout/customizer_page.xml
+++ b/app/src/main/res/layout/customizer_page.xml
@@ -6,17 +6,17 @@
     android:gravity="center"
     android:orientation="horizontal">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center">
+        android:id="@+id/trial_gameboard">
 
         <nyc.c4q.hakeemsackes_bramble.nortmosiac.custom_views.PlayerView
             android:id="@+id/customizer_player"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </LinearLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="0dp"
@@ -28,8 +28,10 @@
         <nyc.c4q.hakeemsackes_bramble.nortmosiac.custom_views.ColorWheelView
             android:id="@+id/customizer_colorwheel"
             android:layout_width="match_parent"
+            android:layout_weight=".5"
             android:layout_height="0dp"
-            android:layout_weight="1" />
+
+            />
 
         <Button
             android:id="@+id/customizer_finish_button"
